derive/test/compile_fail/record_as_seq_incomplete_indexes.stderr
error: unsupported attribute `index` on struct field
 --> compile_fail/record_as_seq_incomplete_indexes.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Value` (in Nightly builds, run with -Z macro-backtrace for more info)
